Fix scrollbar display and prevent horizontal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
 *::-webkit-scrollbar{
   display: none;
 }
+*{
+  overflow-x: hidden;
+}
 
 /* Definition of the design system. All colors, gradients, fonts, etc should be defined here.
 All colors MUST be HSL.
